<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bgColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lnScrl"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo"
                android:layout_marginTop="41dp"
                android:layout_width="160dp"
                android:layout_height="62dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/lineColor"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />
        <Button
            android:id="@+id/btnBlue"
            android:textColor="@android:color/white"
            android:text="@string/blue_btn_text"
            android:layout_marginTop="20dp"
            android:background="@color/blue"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:visibility="gone"/>

        <View
            android:id="@+id/whiteLine"
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_marginTop="20dp"
            android:layout_height="1dp"/>

        <EditText
            android:id="@+id/editUsername"
            style="@style/edit_text"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email" />

        <EditText
            android:id="@+id/editPassword"
            style="@style/edit_text"
            android:inputType="textPassword"
            android:hint="@string/hint_password" />

        <Button
            android:id="@+id/btnGreen"
            android:textColor="@android:color/white"
            android:text="@string/green_btn_user"
            android:layout_marginTop="20dp"
            android:background="@color/tint"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtBottom"
        android:layout_above="@+id/btnPink"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/bottom_text_user"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnPink"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="25dp"
        android:layout_alignParentBottom="true"
        android:text="@string/pink_btn_text"
        android:textColor="@android:color/white"
        android:background="@color/pink" />

</RelativeLayout>
