<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_marginRight="10dp"
        android:layout_width="200dp"
        android:layout_height="200dp" >

        <ImageView
            android:id="@+id/imgThumb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/image"
            android:scaleType="fitXY"
            />

        <RelativeLayout
            android:id="@+id/rnDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#b000">

            <TextView
                android:id="@+id/txtUser"
                android:layout_above="@+id/txtMeta"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/user_name"/>

            <TextView
                android:id="@+id/txtMeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:textSize="14dp"
                android:text="@string/short_meta"/>

            <TextView
                android:id="@+id/carouselPinkButton"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_below="@+id/txtMeta"
                android:layout_marginTop="20dp"
                android:background="@color/tint"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/purchase"/>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>
