<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bgColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrlView"
        android:layout_width="match_parent"
        android:layout_above="@+id/rnTabbar"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lnScrl"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/logo"
                    android:layout_marginTop="41dp"
                    android:layout_width="160dp"
                    android:layout_height="62dp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:background="@color/lineColor"
                android:layout_marginTop="10dp"
                android:layout_height="1dp"/>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="30dp">

                <TextView
                    android:id="@+id/btnStage"
                    android:background="@drawable/round_fill_left"
                    android:textColor="@android:color/white"
                    android:text="@string/stage"
                    android:layout_width="70dp"
                    android:gravity="center"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/btnArtist"
                    android:background="@drawable/round_right"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/artist"
                    android:layout_width="70dp"
                    android:gravity="center"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <EditText
                android:id="@+id/editUsername1"
                style="@style/edit_text"
                android:inputType="text"
                android:hint="הקש שמך" />

            <EditText
                android:id="@+id/editPhone1"
                android:inputType="phone"
                android:hint="מספר טלפון"
                style="@style/edit_text"/>

            <EditText
                android:id="@+id/editArtName1"
                style="@style/edit_text"
                android:inputType="text"
                android:hint="שם הבמה" />

            <EditText
                android:id="@+id/editEmail1"
                style="@style/edit_text"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email" />

            <EditText
                android:id="@+id/editBio1"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:background="@drawable/shape"
                android:minLines="4"
                android:lines="4"
                android:inputType="textMultiLine"
                android:hint="כתובת ואודות הבמה" />

            <Button
                android:id="@+id/btnSignup"
                android:textColor="@android:color/white"
                android:text="@string/pink_btn_text"
                android:layout_marginTop="40dp"
                android:background="@color/pink"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
